
In SAP 2009: set Rf to 0.2, then compute =Rf + 0.2=.

In SAP 2012: compute Rf based on floor insulation thickness, then compute =Rf + 0.2=.

We now implement the SAP 2012 version.

***** Stock import of solid floors

Version 6.5.0 introduced a bug where Solid floors were being reclassified as SuspendedTimber. This is now fixed.

***** Bug in =ref.affected-houses=
The =affected-houses= command would not work correctly if used as the source group for a =filter= in more than one place within a single use of the =on.construction= command.

Each =filter= applied would have a cumulative effect on the contents of the next use of =affected-houses=.
**** Improvements
The manual embedded in the desktop application has had additional indexing information added to it, which improves the specificity of searches for model commands.

In addition, by reading the manual for the help facility, we have learned that enclosing search queries in double quotes ="like this"= searches for the literal occurrence of the text in quotes, rather than the occurrence of all the separate words typed in.

Taken together these changes mean that when searching for model commands like =house.energy-use=, entering ="house.energy-use"= into the help will produce much better specificity of results.
*** Version 6.5.3
We don't know where this version number went.
*** Version 6.5.2
**** New Features
***** Inclusion of a test for wall thickness
Per support ticket number 83
*** Version 6.5.1
**** New Features
***** Roof Area Function

Added =ref.house.roof-area= to allow you to look at the roof area of a dwelling. This is useful when installing a solar PV measure.

**** Bugs Fixed
***** Wall Thickness

Wall thickness was not getting set in the stock import. This resulted in incorrect u-values for old solid-wall buildings.

*** Version 6.5.0