@@ -44,10 +44,16 @@ We now implement the SAP 2012 version.
 
 Version 6.5.0 introduced a bug where Solid floors were being reclassified as SuspendedTimber. This is now fixed.
 
-***** Bug in =ref.affected-houses=
-The =affected-houses= command would not work correctly if used as the source group for a =filter= in more than one place within a single use of the =on.construction= command.
+***** Infiltrations when resetting walls.
 
-Each =filter= applied would have a cumulative effect on the contents of the next use of =affected-houses=.
+The /infiltrations/ property in =ref.action.reset-walls= has been broken since v6.5.0. It was setting air change rate to 0.
+
+This is now working correctly again.
+
+***** Bug in =ref.affected-houses=
+The =ref.affected-houses= command would not work correctly if used as the source group for a =ref.filter= in more than one place within a single use of the =on.construction= command.
+
+Each =ref.filter= applied would have a cumulative effect on the contents of the next use of =ref.affected-houses=.
 **** Improvements
 The manual embedded in the desktop application has had additional indexing information added to it, which improves the specificity of searches for model commands.
 
